[tool.poetry]
name = "langtweet"
version = "0.1.0"
description = "Example of using dynamic few-shot prompting to tweet in a specific style."
authors = [
    "langchain-ai"
]
packages = [
    { include = "langtweet" },
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
langgraph = "^0.2.0"
langsmith= "^0.1.100"
langchain_anthropic = "^0.1.0"
langchain_core = "^0.2.0"
langchain_openai = "^0.1.0"
tavily-python = "^0.3.0"
pytube = "*"
beautifulsoup4 = "*"
streamlit = "*"
langchain_community = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"